# brazilian_address_linkage

./: pyproject.toml
notebooks/: explore_cnefe_data.ipynb
src/pipelines/: extract_addresses.py  integrating_data.py
