[project]
name = "brazilian-address-linkage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "matplotlib>=3.11.1",
    "nbformat>=5.10.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pyspark>=4.2.0",
    "requests>=2.34.2",
    "tqdm>=4.69.0",
]
